<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pythoncode</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rcb-desktop-5.rs@iff.fraunhofer.de">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>so_arm_100_hardware</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
